Upgrade Kafka Connect project for 4.3.1